# nifty-options

./: Cargo.toml  README.md
config/: cli.yml
src/: main.rs  option_data.rs
