[package]
name = "nifty-options"
version = "0.1.0"
authors = ["Prateek Kumar <prateek.kr85@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
reqwest = {version = "0.10", features = ["cookies"]}
smol = {version = "0.3", features = ["tokio02"]}
chrono = "0.4"
cookie = "0.14"
time = "0.2"
lazy_static = "1.4"
alerts = "0.1"
colored = "2"
async-io = "0.1"
clap = {version = "2.33", features = ["yaml"]}
anyhow = "1.0.32"
# notifica = "2.0.0"
# notify-rust = "4.0.0"